--- a/main.dox
+++ b/main.dox
@@ -50,6 +50,13 @@
    - MD5 (md5.h)
    - SHA-1 (sha1.h)
    - SHA-256 (sha256.h)
+   - Blake
+   - Blue Midnight Wish
+   - Grøstl
+   - Keccak
+   - Shabal
+   - Skein
+   - Twister
    
  \subsection MACs Message-Authentification-Codes (MACs)
   Message-Authentification-Codes work like hash function but take an additional
@@ -59,6 +66,7 @@
   Implemented MAC functions:
    - HMAC-SHA-1 (hmac-sha1.h)
    - HMAC-SHA-256 (hmac-sha256.h)
+   
 
  \subsection PRNGs Pseudo-Random-Number-Generators (PRNGs)
   PRNGs produce pseudo random output determinated by the input. They aim to 
